--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                         </ul>
                     </p>
                 </section>
+            <div class="langAndTech">
                 <section>
                     <h2>Technologies</h2>
                     <ul class="technologies">
@@ -85,6 +86,7 @@
                         <li>German - B1</li>
                     </ul>
                 </section>
+            </div>
                 <section>
                     <h2>Education</h2>
                     <ul>
